# TestTaskYadro

./: CMakeLists.txt  README.md  configureFile.json  generateInputData.cpp  main.cpp
include/: ITape.h  MagneticTapeSystem.h  Sort.h  Tape.h
include/factory/: AbstractTapeFactory.h  TapeFactory.h  TemporaryTapeFactory.h
src/: MagneticTapeSystem.cpp  Sort.cpp  Tape.cpp
src/factory/: TapeFactory.cpp  TemporaryTapeFactory.cpp
tests/: tests.cpp
